debug image stretching issue on mobile

--- a/components/illustrations/illustration-card.module.scss
+++ b/components/illustrations/illustration-card.module.scss
@@ -7,7 +7,9 @@
   max-width: 300px;
 
   img{
-
+    width: 100%;
+    max-width: 100%;
+    height: auto;
   }
 
 }
